--- a/ejemplos/template-sport.html
+++ b/ejemplos/template-sport.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nike Running - Engineered for runners. Discover the latest running shoes, apparel, and gear.">
-    <title>Nike Running | Running Shoes, Apparel & Gear</title>
+    <meta name="description" content="Neo Running - Engineered for runners. Discover the latest running shoes, apparel, and gear.">
+    <title>Neo Running | Running Shoes, Apparel & Gear</title>
     <style>
         * {
             margin: 0;
@@ -652,7 +652,7 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="#" class="logo">Nike Running</a>
+            <a href="#" class="logo">Neo Running</a>
             <ul class="nav-center">
                 <li><a href="#featured">Featured</a></li>
                 <li><a href="#stories">Stories</a></li>
@@ -669,7 +669,7 @@
     <!-- Hero Section -->
     <section class="hero" id="featured">
         <div class="hero-content">
-            <div class="hero-label">NIKE RUNNING</div>
+            <div class="hero-label">Neo RUNNING</div>
             <h1 class="hero-title">Run Your Way</h1>
             <p class="hero-subtitle">Engineered for runners. Designed for performance. Built for passion.</p>
             <div class="hero-buttons">
@@ -695,7 +695,7 @@
                         <div class="story-label">FEATURED</div>
                         <h3 class="story-title">Breaking Barriers: Maya's Marathon Journey</h3>
                         <p class="story-description">From casual runner to marathon finisher. Discover how the right gear changed everything.</p>
-                        <p class="story-author">Maya Chen · Marathon Runner</p>
+                        <p class="story-author">Maya Chen Â· Marathon Runner</p>
                     </div>
                 </div>
 
@@ -707,7 +707,7 @@
                         <div class="story-label">SPOTLIGHT</div>
                         <h3 class="story-title">Trail Running: Off the Beaten Path</h3>
                         <p class="story-description">Exploring nature's most challenging courses with gear designed for any terrain.</p>
-                        <p class="story-author">Alex Rodriguez · Trail Enthusiast</p>
+                        <p class="story-author">Alex Rodriguez Â· Trail Enthusiast</p>
                     </div>
                 </div>
 
@@ -719,7 +719,7 @@
                         <div class="story-label">ATHLETE</div>
                         <h3 class="story-title">Speed Training: Elite Performance Secrets</h3>
                         <p class="story-description">Track techniques and training tips from competitive running professionals.</p>
-                        <p class="story-author">Jordan Smith · Track Runner</p>
+                        <p class="story-author">Jordan Smith Â· Track Runner</p>
                     </div>
                 </div>
             </div>
@@ -733,37 +733,37 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../screenshots/template-sport.svg" alt="Nike Air Zoom">
+                        <img src="../screenshots/template-sport.svg" alt="Neo Air Zoom">
                     </div>
                     <div class="product-info">
-                        <p class="product-name">Nike Air Zoom Pegasus 40</p>
+                        <p class="product-name">Neo Air Zoom Pegasus 40</p>
                         <p class="product-price">$129.99</p>
                     </div>
                 </div>
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../screenshots/template-sport.svg" alt="Nike React">
+                        <img src="../screenshots/template-sport.svg" alt="Neo React">
                     </div>
                     <div class="product-info">
-                        <p class="product-name">Nike React Infinity Run Flyknit</p>
+                        <p class="product-name">Neo React Infinity Run Flyknit</p>
                         <p class="product-price">$159.99</p>
                     </div>
                 </div>
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../screenshots/template-sport.svg" alt="Nike Structure">
+                        <img src="../screenshots/template-sport.svg" alt="Neo Structure">
                     </div>
                     <div class="product-info">
-                        <p class="product-name">Nike Vaporfly 2</p>
+                        <p class="product-name">Neo Vaporfly 2</p>
                         <p class="product-price">$275.00</p>
                     </div>
                 </div>
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../screenshots/template-sport.svg" alt="Nike Apparel">
+                        <img src="../screenshots/template-sport.svg" alt="Neo Apparel">
                     </div>
                     <div class="product-info">
                         <p class="product-name">Dri-FIT Running Shirt</p>
@@ -777,7 +777,7 @@
     <!-- Features Section -->
     <section class="features-section" id="tips">
         <div class="features-container">
-            <h2 class="features-title">Why Nike Running?</h2>
+            <h2 class="features-title">Why Neo Running?</h2>
             <div class="features-grid">
                 <div class="feature-item">
                     <div class="feature-icon">?</div>
@@ -815,7 +815,7 @@
                 </div>
 
                 <div class="testimonial-card">
-                    <p class="testimonial-quote">"As a trail runner, I need gear that can handle anything. Nike delivers durability, grip, and comfort on every terrain."</p>
+                    <p class="testimonial-quote">"As a trail runner, I need gear that can handle anything. Neo delivers durability, grip, and comfort on every terrain."</p>
                     <div class="testimonial-author">
                         <div class="testimonial-avatar"></div>
                         <div class="testimonial-info">
@@ -837,7 +837,7 @@
                 </div>
 
                 <div class="testimonial-card">
-                    <p class="testimonial-quote">"Nike's customer support is exceptional. They understand runners and provide products designed specifically for our needs."</p>
+                    <p class="testimonial-quote">"Neo's customer support is exceptional. They understand runners and provide products designed specifically for our needs."</p>
                     <div class="testimonial-author">
                         <div class="testimonial-avatar"></div>
                         <div class="testimonial-info">
@@ -887,7 +887,7 @@
                 <div class="footer-col">
                     <h4>Community</h4>
                     <ul>
-                        <li><a href="#">Nike Run Club</a></li>
+                        <li><a href="#">Neo Run Club</a></li>
                         <li><a href="#">Training Plans</a></li>
                         <li><a href="#">Events</a></li>
                         <li><a href="#">Stories</a></li>
@@ -913,7 +913,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 Nike, Inc. All rights reserved.</p>
+                <p>&copy; 2026 Neo, Inc. All rights reserved.</p>
             </div>
         </div>
     </footer>
