--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -653,8 +653,8 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo">
-                   NeoProd<span>Ux</span>
+                <a href="index.html" class="logo">
+                  NeoProd<span>Ux</span>
                 </a>
                 
                 <ul class="nav-links">
