Fix comment formatting in index.html

--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@
       </div>
     </nav>
 
-    hazme los cambios <!-- Contenido central -->
+    <!-- Contenido central -->
     <div class="hero-main-content">
       <h1>Diseño UX/UI que convierte visitas en clientes</h1>
       <p>Ayudo a startups y negocios digitales a mejorar conversión, claridad y experiencia de usuario con diseño basado en datos y buenas prácticas reales.</p>
