--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       /* Imagen optimizada con placeholder mientras carga */
       background: 
         linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)),
-        url('https://images.unsplash.com/photo-1558655146-364adaf1fcc9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+        url('background-glass.jpg') center/cover no-repeat;
       position: relative;
       overflow: hidden;
     }
