--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,8 @@
 <!-- Agrega este CSS para el formulario corregido -->
 <style>
   /* Estilos para el formulario corregido */
+<style>
+  /* Estilos para el formulario corregido */
   .form-group {
     position: relative;
     margin-bottom: 25px;
