--- a/index.html
+++ b/index.html
@@ -2205,7 +2205,7 @@
       <!-- Testimonio 1 -->
       <div class="testimonial-card">
         <div class="testimonial-header">
-          <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" 
+          <img src="alex.jpg" 
                alt="Alex Chen" 
                class="testimonial-avatar"
                loading="lazy">
