--- a/index.html
+++ b/index.html
@@ -2250,7 +2250,7 @@
       <!-- Testimonio 2 -->
       <div class="testimonial-card">
         <div class="testimonial-header">
-          <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" 
+          <img src="maria.jpg" 
                alt="Maria Rodriguez" 
                class="testimonial-avatar"
                loading="lazy">
