Add styles to hero section in index.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
        HERO SECTION - Optimizado
        ============================== */
     .hero-container {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
   background: 
     url('background-glass.jpg') center/cover no-repeat; /* ← Sin gradiente */
 }
