--- a/index.html
+++ b/index.html
@@ -359,17 +359,14 @@
     }
 
     .hero-main-content h1 {
-      font-size: 3.8rem;
-      color: var(--light-color);
-      font-weight: 800;
-      line-height: 1.1;
-      margin-bottom: 30px;
-      text-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
-      background: linear-gradient(135deg, #ffffff, #e0e0e0);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-    }
+  font-size: 3.8rem;
+  color: #ffffff; /* ← Blanco puro */
+  font-weight: 800;
+  line-height: 1.1;
+  margin-bottom: 30px;
+  text-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
+  /* Eliminado: background, -webkit-background-clip, background-clip */
+}
 
     .hero-main-content p {
       font-size: 1.4rem;
