Update case study link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -2067,7 +2067,7 @@
             </div>
           </div>
 
-          <a href="https://dsd228.github.io/dsd228-paseo-ux-case-study/" class="case-cta" target="_blank">
+          <a href="https://github.com/dsd228/dsd228-paseo-ux-case-study" class="case-cta" target="_blank">
             Ver caso completo
             <i class="fas fa-arrow-right"></i>
           </a>
