--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -833,8 +833,8 @@
                 <div class="footer-column">
                     <h3>Contacto</h3>
                     <ul class="footer-links">
-                        <li><a href="mailto:info@neoprodux.com"><i class="fas fa-envelope"></i> info@neoprodux.com</a></li>
-                        <li><a href="tel:+15551234567"><i class="fas fa-phone"></i> +1 (555) 123-4567</a></li>
+                        <li><a href="mailto:david.diaz.uxdata@gmail.com"><i class="fas fa-envelope"></i> david.diaz.uxdata@gmail.com</a></li>
+                        <li><a href="tel:+543525300076"><i class="fas fa-phone"></i> +543525300076</a></li>
                         <li><a href="#"><i class="fas fa-map-marker-alt"></i> Ciudad Digital, DX 12345</a></li>
                     </ul>
                 </div>
