--- a/index.html
+++ b/index.html
@@ -31,21 +31,26 @@
     @import url('https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;800&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
-    /* Variables CSS para consistencia */
-    :root {
-      --primary-color: #075a3b;
-      --primary-dark: #d9572b;
-      --secondary-color: #667eea;
-      --dark-color: #1a1a1a;
-      --light-color: #ffffff;
-      --gray-light: #f8f9fa;
-      --gray-medium: #666666;
-      --gray-dark: #333333;
-      --shadow-sm: 0 2px 10px rgba(0,0,0,0.08);
-      --shadow-md: 0 10px 30px rgba(0,0,0,0.12);
-      --shadow-lg: 0 20px 60px rgba(0,0,0,0.15);
-      --transition-fast: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      --transition-smooth: 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+   :root {
+  --primary-color: #0ea5e9;      /* azul tecno principal */
+  --primary-dark: #0369a1;       /* azul profundo */
+  --secondary-color: #38bdf8;    /* acento suave */
+  
+  --dark-color: #050807;         /* negro elegante */
+  --light-color: #ffffff;
+
+  --gray-light: #f1f5f9;
+  --gray-medium: #94a3b8;
+  --gray-dark: #1f2933;
+
+  --shadow-sm: 0 4px 20px rgba(14,165,233,0.15);
+  --shadow-md: 0 20px 40px rgba(0,0,0,0.4);
+  --shadow-lg: 0 40px 80px rgba(0,0,0,0.6);
+
+  --transition-fast: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  --transition-smooth: 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
     }
 
     * { 
@@ -117,7 +122,7 @@
       z-index: 0 !important;
     }
     .hero-card {
-  background: rgba(255, 255, 255, 0.06); /* transparente pro */
+  background: rgba(255, 255, 255, 0.01); /* transparente pro */
   backdrop-filter: blur(18px);
   -webkit-backdrop-filter: blur(18px);
   border: 1px solid rgba(255, 255, 255, 0.12);
@@ -131,8 +136,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 10%;
+      height: 10%;
       background: rgba(0, 0, 0, 0.4);
       z-index: 1;
       transition: background-color 0.8s cubic-bezier(0.23, 1, 0.32, 1);
