--- a/index.html
+++ b/index.html
@@ -2315,7 +2315,7 @@
     ::-webkit-scrollbar-thumb:hover {
       background: linear-gradient(135deg, var(--primary-dark), #0284c7);
     }
-  <style>
+ <style>
 .certifications-min {
   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   color: white;
@@ -2333,6 +2333,7 @@
   font-size: 2.5rem;
   margin-bottom: 1rem;
   font-weight: 700;
+  color: white;
 }
 
 .cert-subtitle {
@@ -2343,6 +2344,7 @@
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .cert-list {
@@ -2382,33 +2384,49 @@
   display: block;
   font-size: 1.1rem;
   margin-bottom: 4px;
+  color: white;
 }
 
 .cert-platform {
   font-size: 0.9rem;
   opacity: 0.8;
   display: block;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.cert-link-container {
+  text-align: center;
 }
 
 .cert-link {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background: rgba(255, 255, 255, 0.2);
-  color: white;
+  background: white;
+  color: #667eea;
   text-decoration: none;
   padding: 0.875rem 1.75rem;
   border-radius: 8px;
-  font-weight: 500;
+  font-weight: 600;
   transition: all 0.3s ease;
-  margin: 0 auto;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 2px solid transparent;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
 .cert-link:hover {
-  background: rgba(255, 255, 255, 0.3);
-  transform: translateY(-2px);
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+  background: #f8f9fa;
+  transform: translateY(-3px);
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+  border-color: #667eea;
+}
+
+.cert-link:active {
+  transform: translateY(-1px);
+}
+
+.cert-link-icon {
+  margin-right: 10px;
+  color: #667eea;
 }
 
 @media (max-width: 768px) {
@@ -2419,9 +2437,13 @@
   .cert-list li {
     padding: 1rem;
   }
+  
+  .cert-link {
+    padding: 0.75rem 1.5rem;
+    font-size: 0.95rem;
+  }
 }
 </style>
-
   </style>
 </head>
 <body>
@@ -2579,7 +2601,7 @@
     <a href="#caso-yale" class="case-anchor">Yale School</a>
   </div>
   
-  <section id="<section id="certificaciones" class="certifications-min">
+  <section id="certificaciones" class="certifications-min">
   <div class="container">
     <h2>Certificaciones</h2>
     <p class="cert-subtitle">
@@ -2634,13 +2656,16 @@
       </li>
     </ul>
 
-    <a href="https://www.credly.com/users/david-sebastian-diaz" target="_blank" class="cert-link">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="margin-right: 8px;">
-        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
-      </svg>
-      Ver credenciales verificadas en Credly →
-    </a>
+    <div class="cert-link-container">
+      <a href="https://www.credly.com/users/david-sebastian-diaz" target="_blank" class="cert-link">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="cert-link-icon">
+          <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+        </svg>
+        Ver credenciales verificadas en Credly →
+      </a>
+    </div>
   </div>
+</section>
 
 
   <section class="clients-section">
