Update Calendly link to include HTTPS

--- a/index.html
+++ b/index.html
@@ -3284,7 +3284,7 @@
             <i class="fas fa-envelope"></i>
             <span>david.diaz.uxdata@gmail.com</span>
           </a></li>
-          <li><a href="calendly.com/dsd228-dd" target="_blank">
+          <li><a href="https://calendly.com/dsd228-dd" target="_blank">
             <i class="fas fa-calendar-alt"></i>
             <span>Agendar llamada</span>
           </a></li>
@@ -3402,7 +3402,7 @@
     // CTA FLOTANTE
     // ========================================
     function openCalendly() {
-      window.open('calendly.com/dsd228-dd');
+      window.open('https://calendly.com/dsd228-dd');
     }
 
     const floatingCTA = document.querySelector('.floating-cta');
