--- a/index.html
+++ b/index.html
@@ -2583,7 +2583,7 @@
           </div>
           
           <span class="nav-separator">|</span>
-          <a href="#casos">Casos</a>
+          <a href="#casos">Proyectos</a>
           <span class="nav-separator">|</span>
           <a href="blog.html">Blog</a>
           <span class="nav-separator">|</span>
@@ -2665,12 +2665,11 @@
   
   <!-- Navegación por anclas -->
   <div class="case-anchors">
-    <a href="#caso-paseo" class="case-anchor active">PASEO FinTech</a>
-    <a href="#caso-nexus" class="case-anchor">Nexus Logistics</a>
-    <a href="#caso-caroyense" class="case-anchor">La Caroyense</a>
-    <a href="#caso-yale" class="case-anchor">Yale School</a>
+    <a href="#marmoleria" class="case-anchor active">Marmolería</a>
+    <a href="#editorial" class="case-anchor">Editorial Digital</a>
+    <a href="#tech" class="case-anchor">Productos Tech</a>
   </div>
-  
+
   <!-- SECCIÓN DE CERTIFICACIONES MEJORADA -->
   <section id="certificaciones" class="certifications-min">
     <div class="container">
@@ -2757,248 +2756,188 @@
     </div>
   </section>
 
-  <!-- Sección de Casos de Estudio -->
+  <!-- Sección de Casos de Estudio - REEMPLAZADA POR LOS NUEVOS PROYECTOS -->
   <section class="cases-section" id="casos">
     <div class="cases-container">
       <div class="cases-header">
-        <h2>Casos que generan impacto real</h2>
-        <p>Proyectos seleccionados donde el diseño transformó resultados de negocio de forma medible</p>
+        <h2>Proyectos de Diseño UX/UI</h2>
+        <p>Mockups conceptuales que muestran enfoque en legibilidad, claridad y experiencia de usuario</p>
       </div>
 
-      <!-- Caso 1 -->
-      <div id="caso-paseo" class="case-study animate-fade-in">
+      <!-- Caso 1: Marmolería -->
+      <div id="marmoleria" class="case-study animate-fade-in">
         <div class="case-content">
-          <span class="case-category">FinTech · Mobile App</span>
-          <h2 class="case-title">PASEO – UX Case Study</h2>
+          <span class="case-category">E-commerce · Industria Tradicional</span>
+          <h2 class="case-title">Marmolería – Mockup UX/UI Web</h2>
 
           <div class="case-problem">
-            <h4>La app</h4>
+            <h4>Contexto</h4>
             <p>
-              Paseo es una aplicación móvil que conecta dueños de mascotas con paseadores de perros confiables,
-              integrando seguimiento en tiempo real y un sistema de pagos digitales simple y seguro.
+              Las marmolerías suelen tener presencia digital desactualizada, poco visual y sin jerarquía clara de productos y servicios.
+              Las texturas, colores y terminaciones del mármol no se comunicaban efectivamente.
             </p>
           </div>
 
           <div class="case-solution">
-            <h4>La solución</h4>
+            <h4>Enfoque de diseño</h4>
             <p>
-              Diseño end-to-end con foco en experiencia FinTech: flujos de pago guiados, wallet interno y
-              transparencia total de tarifas. Reducción del 60% en pasos críticos del checkout.
+              Mockup web moderno que comunique calidad, solidez y profesionalismo, facilitando la visualización de materiales y trabajos sin saturar al usuario. 
+              Estética minimalista y limpia con uso de imágenes como eje principal.
             </p>
           </div>
 
           <div class="case-results">
             <div class="result-item">
-              <div class="result-value">+75%</div>
-              <div class="result-label">Velocidad en transacciones</div>
+              <div class="result-value">Figma</div>
+              <div class="result-label">Herramienta</div>
             </div>
             <div class="result-item">
-              <div class="result-value">-45%</div>
-              <div class="result-label">Errores de usuario</div>
+              <div class="result-value">UX/UI</div>
+              <div class="result-label">Especialidad</div>
             </div>
             <div class="result-item">
-              <div class="result-value">$5M/mes</div>
-              <div class="result-label">Volumen procesado</div>
+              <div class="result-value">Mockup</div>
+              <div class="result-label">Tipo</div>
             </div>
           </div>
 
-          <a href="https://github.com/dsd228/dsd228-paseo-ux-case-study" class="case-cta" target="_blank">
-            Ver caso completo
+          <a href="#marmoleria-details" class="case-cta">
+            Ver detalles del proyecto
             <i class="fas fa-arrow-right"></i>
           </a>
         </div>
 
         <div class="case-visual">
           <img 
-            src="Desktop - 1paseo.png" 
-            alt="Dashboard FinTech Paseo" 
+            src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" 
+            alt="Mockup Marmolería - Diseño web elegante para marmolería" 
             class="case-image"
             loading="lazy"
           >
           <div class="case-overlay">
-            <p class="overlay-text">Sistema de pagos que procesa +$5M mensuales tras rediseño UX/UI</p>
-            <a href="https://dsd228.github.io/dsd228-paseo-ux-case-study/" class="overlay-cta" target="_blank">
-              Ver proceso de diseño
+            <p class="overlay-text">Diseño web que transmite elegancia y durabilidad del mármol con estética moderna y sobria</p>
+            <a href="#marmoleria-details" class="overlay-cta">
+              Ver detalles del diseño
               <i class="fas fa-arrow-right"></i>
             </a>
           </div>
         </div>
       </div>
 
-      <!-- Caso 2 -->
-      <div id="caso-nexus" class="case-study animate-fade-in">
+      <!-- Caso 2: Editorial Digital -->
+      <div id="editorial" class="case-study animate-fade-in">
         <div class="case-content">
-          <span class="case-category">Logística · SaaS B2B</span>
-          <h2 class="case-title">Nexus Logistics</h2>
+          <span class="case-category">Editorial · Contenido Digital</span>
+          <h2 class="case-title">Editorial Digital – Mockup UX/UI Web</h2>
 
           <div class="case-problem">
-            <h4>El problema</h4>
+            <h4>Contexto</h4>
             <p>
-              Dashboard B2B con curva de aprendizaje elevada.
-              Los equipos operativos requerían semanas de capacitación para tareas básicas.
+              Muchas editoriales digitales priorizan cantidad de contenido pero descuidan la experiencia de lectura y la organización visual.
+              Los textos largos resultan difíciles de leer y navegar.
             </p>
           </div>
 
           <div class="case-solution">
-            <h4>La solución</h4>
+            <h4>Enfoque de diseño</h4>
             <p>
-              Rediseño UX/UI con arquitectura modular, progressive disclosure y patrones consistentes.
-              Tutoriales contextuales y jerarquía visual clara.
+              Mockup editorial que facilite la lectura, destaque el contenido y ordene la información sin perder identidad ni carácter editorial.
+              Fuerte jerarquía tipográfica, layout limpio y uso del espacio en blanco para mejorar la lectura.
             </p>
           </div>
 
           <div class="case-results">
             <div class="result-item">
-              <div class="result-value">+40%</div>
-              <div class="result-label">Usabilidad percibida</div>
+              <div class="result-value">Figma</div>
+              <div class="result-label">Herramienta</div>
             </div>
             <div class="result-item">
-              <div class="result-value">-30%</div>
-              <div class="result-label">Tiempo de capacitación</div>
+              <div class="result-value">UX/UI</div>
+              <div class="result-label">Especialidad</div>
             </div>
             <div class="result-item">
-              <div class="result-value">200+</div>
-              <div class="result-label">Empresas usuarias</div>
+              <div class="result-value">Editorial</div>
+              <div class="result-label">Tipo</div>
             </div>
           </div>
 
-          <a href="https://github.com/dsd228/nexus-logistics-ui" target="_blank" class="case-cta">
-            Ver caso completo
+          <a href="#editorial-details" class="case-cta">
+            Ver detalles del proyecto
             <i class="fas fa-arrow-right"></i>
           </a>
         </div>
 
         <div class="case-visual">
           <img 
-            src="dispatch - copia.png" 
-            alt="Dashboard SaaS Logística" 
+            src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" 
+            alt="Mockup Editorial Digital - Diseño para lectura cómoda" 
             class="case-image"
             loading="lazy"
           >
           <div class="case-overlay">
-            <p class="overlay-text">Plataforma SaaS que redujo el tiempo de capacitación operativa</p>
-            <a href="https://github.com/dsd228/nexus-logistics-ui" target="_blank" class="overlay-cta">
-              Ver proceso de diseño
+            <p class="overlay-text">Experiencia editorial moderna, legible y elegante para consumir artículos de forma cómoda</p>
+            <a href="#editorial-details" class="overlay-cta">
+              Ver detalles del diseño
               <i class="fas fa-arrow-right"></i>
             </a>
           </div>
         </div>
       </div>
 
-      <!-- Caso 3 -->
-      <div id="caso-caroyense" class="case-study animate-fade-in">
+      <!-- Caso 3: Productos Tech -->
+      <div id="tech" class="case-study animate-fade-in">
         <div class="case-content">
-          <span class="case-category">E-Commerce · Mobile First</span>
-          <h2 class="case-title">La Caroyense</h2>
+          <span class="case-category">E-commerce · Tecnología</span>
+          <h2 class="case-title">Productos Tech – Mockup UX/UI Web</h2>
 
           <div class="case-problem">
-            <h4>El problema</h4>
+            <h4>Contexto</h4>
             <p>
-              Conversión baja y alto abandono de carrito.
-              Experiencia móvil deficiente en un mercado dominado por compras desde celular.
+              Las tiendas de productos tech suelen saturar al usuario con especificaciones, banners y estímulos visuales innecesarios.
+              La decisión de compra se vuelve compleja y confusa.
             </p>
           </div>
 
           <div class="case-solution">
-            <h4>La solución</h4>
+            <h4>Enfoque de diseño</h4>
             <p>
-              Rediseño mobile-first con jerarquía visual clara,
-              reducción de fricción y flujos de compra optimizados para conversión.
+              Mockup de e-commerce tech que priorice el producto, facilite la comparación y guíe la decisión de compra sin fricción.
+              Layout limpio y ordenado con jerarquía clara entre producto, precio y acción.
             </p>
           </div>
 
           <div class="case-results">
             <div class="result-item">
-              <div class="result-value">+340%</div>
-              <div class="result-label">Conversión</div>
+              <div class="result-value">Figma</div>
+              <div class="result-label">Herramienta</div>
             </div>
             <div class="result-item">
-              <div class="result-value">-45%</div>
-              <div class="result-label">Abandono de carrito</div>
+              <div class="result-value">UX/UI</div>
+              <div class="result-label">Especialidad</div>
             </div>
             <div class="result-item">
-              <div class="result-value">+$2.1M</div>
-              <div class="result-label">Ingresos anuales</div>
+              <div class="result-value">E-commerce</div>
+              <div class="result-label">Tipo</div>
             </div>
           </div>
 
-          <a href="https://github.com/dsd228/la-caroyense-ux-ui-redesign" target="_blank" class="case-cta">
-            Ver caso completo
+          <a href="#tech-details" class="case-cta">
+            Ver detalles del proyecto
             <i class="fas fa-arrow-right"></i>
           </a>
         </div>
 
         <div class="case-visual">
           <img 
-            src="Bodega La Caroyense — UX_UI Redesign/Desktop - 3.png" 
-            alt="E-commerce mobile-first" 
+            src="https://images.unsplash.com/photo-1546435770-a3e426bf472b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" 
+            alt="Mockup Productos Tech - E-commerce para tecnología" 
             class="case-image"
             loading="lazy"
           >
           <div class="case-overlay">
-            <p class="overlay-text">Rediseño enfocado en conversión y experiencia mobile</p>
-            <a href="https://github.com/dsd228/la-caroyense-ux-ui-redesign" target="_blank" class="overlay-cta">
-              Ver proceso de diseño
-              <i class="fas fa-arrow-right"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Caso 4 -->
-      <div id="caso-yale" class="case-study animate-fade-in">
-        <div class="case-content">
-          <span class="case-category">Education · UX Redesign</span>
-          <h2 class="case-title">Yale School of Art</h2>
-
-          <div class="case-problem">
-            <h4>El problema</h4>
-            <p>
-              Sitio institucional con arquitectura de información caótica,
-              jerarquía visual inexistente y navegación confusa.
-            </p>
-          </div>
-
-          <div class="case-solution">
-            <h4>La solución</h4>
-            <p>
-              Rediseño UX/UI con foco en claridad estructural,
-              jerarquía visual y reducción de carga cognitiva.
-            </p>
-          </div>
-
-          <div class="case-results">
-            <div class="result-item">
-              <div class="result-value">+60%</div>
-              <div class="result-label">Claridad percibida</div>
-            </div>
-            <div class="result-item">
-              <div class="result-value">-50%</div>
-              <div class="result-label">Tiempo de búsqueda</div>
-            </div>
-            <div class="result-item">
-              <div class="result-value">+45%</div>
-              <div class="result-label">Usabilidad general</div>
-            </div>
-          </div>
-
-          <a href="https://github.com/dsd228/yale-school-art-redesign" target="_blank" class="case-cta">
-            Ver caso completo
-            <i class="fas fa-arrow-right"></i>
-          </a>
-        </div>
-
-        <div class="case-visual">
-          <img 
-            src="Rediseño del Sitio Web - Yale School of Art/HomeDesktop - 2.jpg" 
-            alt="Rediseño Yale School of Art" 
-            class="case-image"
-            loading="lazy"
-          >
-          <div class="case-overlay">
-            <p class="overlay-text">Rediseño UX de un sitio académico complejo</p>
-            <a href="https://github.com/dsd228/yale-school-art-redesign" target="_blank" class="overlay-cta">
-              Ver proceso de diseño
+            <p class="overlay-text">Experiencia de compra moderna e intuitiva para productos tecnológicos premium</p>
+            <a href="#tech-details" class="overlay-cta">
+              Ver detalles del diseño
               <i class="fas fa-arrow-right"></i>
             </a>
           </div>
@@ -3010,10 +2949,10 @@
   <!-- CTA DE REFUERZO DESPUÉS DE LOS PRIMEROS CASOS -->
   <div class="reinforcement-cta">
     <div class="reinforcement-content">
-      <h2 class="reinforcement-title">¿Querés resultados similares en tu producto?</h2>
-      <p class="reinforcement-subtitle">Nuestro enfoque basado en datos y mejores prácticas de UX/UI garantiza mejoras medibles en conversión y experiencia de usuario.</p>
+      <h2 class="reinforcement-title">¿Buscás un diseño similar para tu producto?</h2>
+      <p class="reinforcement-subtitle">Trabajamos en proyectos de diversos sectores, aplicando las mejores prácticas de UX/UI para lograr resultados efectivos.</p>
       <a href="#contacto" class="btn-reinforcement">
-        Solicitar auditoría UX
+        Conversemos sobre tu proyecto
         <i class="fas fa-arrow-right"></i>
       </a>
     </div>
